syntax = "proto3";

package prime;

option go_package = "./Unary";

service PrimeService {
  rpc get_nth_prime (PrimeRequest) returns (PrimeResponse);
}

message PrimeRequest {
  int32 n = 1;
}

message PrimeResponse {
  int64 prime = 1;
}
